Fixing mobile spacing between contact links

--- a/_sass/includes/_footer.scss
+++ b/_sass/includes/_footer.scss
@@ -10,4 +10,9 @@
     li+li {
         margin-left: 1em;
     }
+    @media (max-width: 1100px) {
+        li+li {
+            margin-left: 0.3em;
+        }
+    }
 }
